# Maila

./: .clang-tidy  .devcontainer.json  .env  .gitignore  .maila.repos  README.md  README.md.orig  environment.sh  guides.md  initialize_project.sh  load_env.sh  load_env.sh.orig  remote_environment.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
scripts/: aliases  aliases.orig  bash_utility  init.sh  load_environment.sh  setup_vs_code.sh
src/: ros2.repos
z_fromRaspberry/: passaggiSeguiti.txt  version.txt
z_fromRaspberry/6_common/common_meta/: CMakeLists.txt  package.xml
z_fromRaspberry/6_common/custom_msgs/: CMakeLists.txt
z_fromRaspberry/6_common/robocar_meta/: CMakeLists.txt  package.xml
z_fromRaspberry/6_common/robocar_meta/config/: control.yaml  hardware_interface.yaml  joy.yaml  lap_counter.yaml  mms_client.yaml  teleop_interface.yaml
z_fromRaspberry/6_common/robocar_meta/launch/: simple_rviz.launch  start_mms.launch
z_fromRaspberry/6_common/robocar_meta/missions/: machine_definition.launch  remote.launch  rerun_control.xml
z_fromRaspberry/6_common/robocar_meta/rviz_config/: base_config.rviz
z_fromRaspberry/6_common/robocar_meta/script/: start_mms.sh
z_fromRaspberry/ball_chaser/: CMakeLists.txt
z_fromRaspberry/ball_chaser/src/: process_image.cpp  process_image_tracking.cpp
z_fromRaspberry/code_download/01_color_filtering/: color_space_hsv  color_space_rgb  info.txt
z_fromRaspberry/code_download/02_shape_detection/: shape_detection  shape_detection.cpp
z_fromRaspberry/code_download/03_img_filtering/: Morphology_1  (+3 more)
(+5 files in other folders)
