<?xml version="1.0"?>
<package format="2">
  <name>robocar_meta</name>
  <version>0.0.1</version>
  <description>Meta package for car launching</description>
  <maintainer email="valerio.magnago@unitn.it">Valerio Magnago</maintainer>
  <license>TODO</license>
  <author email="valerio.magnago@unitn.it"> Valerio Magnago </author>


  <buildtool_depend>catkin</buildtool_depend>

</package>
